# dwh-lineage-graph-generator

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  __init__.py  cli.py  lineage_graph.py  lineage_parser.py  metadata.py  missing_nodes_detector.py  missing_nodes_imputer.py  mmd_generator.py  pyproject.toml  styles.py
.github/workflows/: check-pre-commit.yml  ci.yml
docs/: code_architecture.md  development.md  doc_style.md  file_format.md  file_organization.md
extractor/: __init__.py  sql_parser.py  yaml_writer.py
src/lineage/: cli.py  models.py
src/lineage/export/: mermaid.py
src/lineage/graph/: lineage_graph.py  missing_nodes.py
src/lineage/io/: sql_lineage_extractor.py  sql_parser.py  yaml_parser.py  yaml_writer.py
tests/: __init__.py  conftest.py  test_cli_integration.py  test_extractor_sql_parser.py  test_extractor_yaml_writer.py  test_generator.py  test_graph.py  test_metadata.py  test_missing_nodes_detector.py  test_sql_lineage_extractor.py  test_styles.py
tests/data/: example_depth_1.mmd  example_focus_both.mmd  example_focus_downstream.mmd  example_focus_upstream.mmd  example_full_lineage.mmd  example_lineage.json  example_lineage.yaml  legend_output.mmd  test_extract.sql  test_extract2.sql  test_extract2_expected.yaml  test_extract_demo.sql  test_extract_expected.yaml
